--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-helmet": "^5.2.0",
     "react-native": "^0.57.8",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
